--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,7 +6,7 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include services.html %}
+  {% include feature.html %}
   {% include portfolio.html %}
   {% include aside.html %}
   {% include contact.html %}
