--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>もっと旅の記録を楽に！楽しくする！！Tabiji</h1>
+            <h1><h1>旅の記録を<br>簡単に、楽しく<br>Tabiji</h1></h1>
             <hr>
             <p></p>
         </div>
