Topページ修正

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1><h1>旅の記録を<br>簡単に、楽しく<br>Tabiji</h1></h1>
+            <h1>旅の記録を簡単に<br>旅の記録でもっと楽しく</h1>
             <hr>
-            <p></p>
+            <p>Tabijiは旅の記録を総合管理できる旅専門の記録アプリです。<br>思い出いっぱいの旅。記録に残しておきたいのに面倒で...<br>記録を残してみたけど、見たい時に見たい記録が見つからない！<br>なんてことはありませんか？</p>
         </div>
     </div>
 </header>
