--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>旅の記録を簡単に<br>旅の記録でもっと楽しく</h1>
             <hr>
-            <p>Tabijiは旅の記録を総合管理できる旅専門の記録アプリです。<br>思い出いっぱいの旅。記録に残しておきたいのに面倒で...<br>記録を残してみたけど、見たい時に見たい記録が見つからない！<br>なんてことはありませんか？</p>
+            <p>Tabijiは旅専門の記録アプリです。<br>思い出いっぱいの旅。記録を残しておきたいけど面倒くさい。記録を残してみたけど、見たい時に見たい記録が見つからない！なんてことはありませんか？</p>
         </div>
     </div>
 </header>
