--- a/_includes/concept.html
+++ b/_includes/concept.html
@@ -1,4 +1,4 @@
-<section id="feature">
+<section id="concept">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
