--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
-<header>
-    <div class="header-content">
-        <div class="header-content-inner">
-            <h1>旅の記録を簡単に<br>旅の記録でもっと楽しく</h1>
-            <hr>
-            <p>Tabijiは旅専門の記録アプリです。<br>思い出いっぱいの旅。記録を残しておきたいけど面倒くさい。記録を残してみたけど、見たい時に見たい記録が見つからない！なんてことはありませんか？</p>
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1>非SNSな<br>旅の記録アプリTabiji</h1>
+                <hr>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
