--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,6 +6,7 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
+  {% include about.html %}
   {% include concept.html %}
   {% include portfolio.html %}
   {% include aside.html %}
