--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,7 @@
   {% include nav.html %}
   {% include header.html %}
   {% include about.html %}
-  {% include concept.html %}
+  {% include features.html %}
   {% include portfolio.html %}
   {% include aside.html %}
   {% include contact.html %}
