--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,7 +8,7 @@
   {% include header.html %}
   {% include about.html %}
   {% include features.html %}
-  {% include portfolio.html %}
+  {% include product.html %}
   {% include aside.html %}
   {% include contact.html %}
   {% include scripts.html %}
