--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                     <a class="page-scroll" href="#features">Features</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#product">Product</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
