--- a/_includes/features.html
+++ b/_includes/features.html
@@ -9,6 +9,17 @@
         </div>
         <div class="container">
             <div class="row">
+                {% for feature in site.data.features %}
+                <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box">
+                            <i class="fa fa-4x fa-wifi wow bounceIn text-primary"></i>
+                            <h3>{{ feature.title }}</h3>
+                            <p class="text-muted">{{ feature.description }}</p>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+        <!--                
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-wifi wow bounceIn text-primary"></i>
@@ -38,5 +49,6 @@
                     </div>
                 </div>
             </div>
+            -->
         </div>
     </section>
