--- a/_includes/features.html
+++ b/_includes/features.html
@@ -2,19 +2,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Tabijiの特徴</h2>
+                    <h2 class="section-heading">{% t feature %}</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                {% for feature in site.data.features %}
+                {% for f in site.translations[site.lang]["features"] %}
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-wifi wow bounceIn text-primary"></i>
-                        <h3>{{ feature.title }}</h3>
-                        <p class="text-muted">{{ feature.description }}</p>
+                        <i class="fa fa-4x {{ f.icon }} wow bounceIn text-primary"></i>
+                        <h3>{{ f.title }}</h3>
+                        <p class="text-muted">{{ f.description }}</p>
                     </div>
                 </div>
                 {% endfor %}
