--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>{{site.data.tabiji.catchcopy}}</h1>
+                <h1>{% t catchcopy %}</h1>
                 <hr>
             </div>
         </div>
