docs配下のコピー対象外ディレクトリからjs, css, font系の除外をやめた（コピーしないとファイルが見れなくなるため）

--- a/_includes/product.html
+++ b/_includes/product.html
@@ -4,7 +4,7 @@
             {% for product in site.translations[site.lang]["products"] %}            
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
-                        <img src="{{ product.image | absolute_url }}" class="img-responsive" alt="">
+                        <img src="{{ product.image | relative_url }}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
