contactとasideをコメント化

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,8 +9,8 @@
   {% include about.html %}
   {% include features.html %}
   {% include product.html %}
-  {% include aside.html %}
-  {% include contact.html %}
+  <!-- include aside.html -->
+  <!-- contact.html -->
   {% include scripts.html %}
 </body>
 
