--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -122,7 +122,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url("../img/header.jpg");
+  background-image: url("../img/header_800.png");
   text-align: center;
   color: white; }
   header .header-content {
